--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <div class='main-title'>
         <h1>Hola Te LLego una Carta!</h1>
-        <span>22/04/2023 - Carta de  <span class='gustavo'>ELISAYCODE</span></span>
+        <span>16/07/2023 - Carta de  <span class='gustavo'>FabricioSC</span></span>
       </div>      
       <div class='container'>
         <div class='card'>
           <div class='title'>
-            <h1>KELLY</h1>
+            <h1>Johanna</h1>
           </div>
           <div class='heart-box'>
             <i class='bx bxs-heart'></i>
@@ -33,12 +33,12 @@
             </section>
             <br>
             <section>
-              <p>Eres la forma más bonita que ha tenido la vida de enseñarme que vale la pena arriesgarse a amar.
+              <p>Eres la forma más bonita que ha tenido la vida de enseñarme que alguien vale toda la pena.
               </p>
             </section>
             <br>
             <section>
-              <p>Te invito a seguir el enlace y acompañame en este viaje por la vida.
+              <p>Este tiempo junto fue lo mejor que eh tenido,ERES MI TODOOO!!!.
               </p>
             </section>
           </div>
@@ -46,7 +46,7 @@
             <p>I <i class='bx bxs-heart'></i> U</p>
           </div>
           <div class='enlace'>
-            <a href="teAmo.html" class="btn-flotante">te invito a pasar al siguiente nivel</a>
+            <a href="teAmo.html" class="btn-flotante">Toca Aqui:3</a>
           </div>
         </div>
       </div>
