--- a/teAmo.html
+++ b/teAmo.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TE AMO</title>
+    <title>:3</title>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button class="btn">❤<span class="per">I LOVE YOU 😁</span></button>
+    <button class="btn">❤<span class="per">TE QUIERO 😁</span></button>
     <div class="contenedor">
         <p>¿QUIERES SER MI NOVIA?</p>
 
